    + [NT] Replace unnecessary uses of file_info with index.

  * data/binary/embedded-libs:
    + [RG] Detect embedded copies of libmpg123.
  * data/spelling/corrections:
    + [RG] Add "functiosn" to the list of spelling mistakes.

  * frontend/lintian:
    + [NT] Fix a regression that completely broke the
      command-line argument "--packages-from-file", when
      the file was "-".

 -- Niels Thykier <niels@thykier.net>  Tue, 25 Mar 2014 22:51:16 +0100

lintian (2.5.22) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - invalid-restriction-label-in-source-relation
      - invalid-restriction-namespace-in-source-relation
      - invalid-restriction-term-in-source-relation
      - license-problem-gfdl-non-official-text
      - license-problem-non-free-RFC-BCP78
      - privacy-breach-google-plus
      - privacy-breach-twitter
      - restriction-list-with-debhelper-with-conflicting-debhelper-version
      - restriction-list-with-debhelper-without-debhelper-version
      - restriction-list-with-versioned-dpkg-dev-conflict
      - restriction-list-without-versioned-dpkg-dev-dependency
      - source-is-missing
      - stageX-profile-used-but-no-binary-package-dropped

  * checks/*:
    + [NT] Avoid using "I" or "we" in tag descriptions.
    + [NT] When looping over the names of binary packages,
      prefer the order they are listed in the control file.
      Previously they were either sorted by name or ordered
      by Perl's hash iterator.
  * checks/control-file.{desc,pm}:
    + [NT] Apply patch from Johannes Schauer to validate
      build-profile usage.
  * checks/control-files.pm:
    + [NT] Remove special case for udebs on empty control
      files.  Thanks to Cyril Brulebois for testing it.
  * checks/cruft.pm:
    + [BR,NT] Optimise the GFDL check considerably in some
      cases (e.g. the linux source).  (Closes: #738342)
    + [BR] Factorize GFDL detection. Detect non official